vlib/v/checker/tests/array_filter_anon_fn_err_b.vv
fn main() {
	a := [1,2,3,4].filter(fn(a string) bool { return a.len > 0 })
	println(a)
}
